- Changed: Improved and automated login process for Netatmo devices (to obtain client ID and Password with user selectable scopes)
- Changed: Removed Highcharts 'Download PNG/JPG/SVG' buttons until export server is fixed
- Changed: Using OpenStreetMap for Latitude/Longitude query in settings
- Fixed: Custom Icons, making sure they are valid and loaded OK
- Fixed: Computed Meter summation
- Fixed: Possible mutex lock issue when logging
- Fixed: Pushers, corrected Gas value rounding
- Fixed: Python framework, invalid sValue when creating a General/kWh sensor
- Fixed: RFXCom 868 MHz Weather device
- Fixed: RFXCom, WS90 Weather device
- Removed: Thermosmart thermostat (Product no longer supported/available by the manufacturer)
- Updated: Translations

Version 2024.7 (July 13th 2024)
- Implemented: P1 Meter, Report, Header now also supports simple mode (No T1/T2/R1/R2 but just total)
- Fixed: Google Cloud Messaging (GCM/FCM) possible crash when notification needed to be send

Version 2024.6 (July 8th 2024)
- Fixed: EventSystem, LOG_FORCE now always logged
- Changed: Google Cloud Messaging (GCM) now uses the new v1 API of Google's Firebase Cloud Messaging (FCM)

Version 2024.5 (July 7th 2024)
- Implemented: Currency Symbol in Location Settings
- Implemented: dzVents, Added historical data helper 'med' to calculate the median value
- Implemented: dzVents, Improved logging
- Implemented: Energy Dashboard
- Implemented: Enever, Added Budget Energy and Eneco
- Implemented: Enphase, Live storage data
- Implemented: Enphase, Option for more Inverter details (ac/dc voltage, temperature, lastupdate)
- Implemented: Event Editor, Close/Close All menu dropdown
- Implemented: Event Editor, Storing/Loading opened events
- Implemented: Hour chart for P1 log
- Implemented: MQTT-AD Climate Fan Mode
- Implemented: MQTT-AD Climate Swing Mode
- Implemented: OpenWeatherMap, API 3.0 support
- Implemented: P1 Meter, option to specify view (low/high tariff or simple (dynamic contract))